--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -93,6 +93,8 @@ Control Room Log Map
                     
                     Array.from(marker).forEach(function(log) {
                         
+                        console.log(log);
+                        
                         var security = "";
                         if (log['security_incident_description'])
                         {
