debugging map markers

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -90,6 +90,7 @@ Control Room Log Map
 
                     var marker = event.feature.getProperty('marker');
                     var info_content;
+                    console.log("Marker Window");
                     
                     Array.from(marker).forEach(function(log) {
                         
