modified map markers

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -79,7 +79,7 @@ Control Room Log Map
                     var colour = feature.getProperty('colour');
                     //var zI = feature.getProperty('zIndex');
                     return {
-                        icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%20|" + colour,
+                        icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=%20|" + colour
                         //zIndex: zI
                     };
                 });
