updated marker code

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -97,7 +97,7 @@ Control Room Log Map
 
                         console.log("loop");
                         
-                        var log = marker[i]["log"];
+                        var log = marker[i];
                         
                         var security = "";
                         if (log['security_incident_description'])
