debuggin marker code

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -93,6 +93,9 @@ Control Room Log Map
                     console.log("Marker Window");
                     
                     var arrayLength = marker.length;
+                    
+                    console.log(arrayLength);
+                    
                     for (var i = 0; i < arrayLength; i++) {
 
                         console.log("loop");
