debugging marker code

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -92,7 +92,8 @@ Control Room Log Map
                     var info_content;
                     console.log("Marker Window");
                     
-                    var arrayLength = marker.length;
+                    //var arrayLength = marker.length;
+                    var arrayLength = Object.keys(marker).length;
                     
                     console.log(arrayLength);
                     
