--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -93,7 +93,7 @@ Control Room Log Map
                     console.log("Marker Window");
                     
                     //var arrayLength = marker.length;
-                    var logs = marker['log'];
+                    var logs = marker['logs'];
                     var arrayLength = Object.keys(logs).length;
                     
                     console.log(arrayLength);
