--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -80,7 +80,7 @@ Control Room Log Map
                     var multiple = feature.getProperty('multiple');
                     //var zI = feature.getProperty('zIndex');
                     return {
-                        if (multiple == true)
+                        if (multiple = true)
                         {
                             icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=M|" + colour
                         } else {
