--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -77,7 +77,7 @@ Control Room Log Map
                 
                 map.data.setStyle(function(feature) {
                     var colour = feature.getProperty('colour');
-                    var multiple = feature.getProperty('multiple');
+                    var marker = feature.getProperty('marker');
                     var logs = marker['logs'];
                     var arrayLength = Object.keys(logs).length;
                     //var zI = feature.getProperty('zIndex');
