Modified map marker colour and severity coding

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -176,7 +176,7 @@ Control Room Log Map
                             medical+security+general+lost+
                             '</div>';
                         
-                        info_content = info_content+content+"</br>";
+                        info_content = info_content+content;
                     }
 
                     infowindow.setContent(info_content);
