--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -85,7 +85,7 @@ Control Room Log Map
                     if (arrayLength > 1)
                     {
                         return {
-                            icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=M|" + colour
+                            icon: "https://chart.apis.google.com/chart?chst=d_map_pin_letter&chld="+arrayLength+"|" + colour
                         };
                     } else {
                         return {
