--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -65,6 +65,15 @@ Control Room Log Map
             EventSiteOverlay.prototype = new google.maps.OverlayView();
 
             // Initialize the map and the custom overlay.
+            
+            function refreshMarkers(map, geoJson){
+                map.data.forEach(function (feature) {
+                    map.data.remove(feature);
+                });
+                
+                map.data.loadGeoJson(geoJson);
+                setTimeout(refreshMarkers(map, geoJson), 5000);
+            }
 
             function initMap() {
                 var map = new google.maps.Map(document.getElementById('largeLogMap'), {
@@ -194,6 +203,7 @@ Control Room Log Map
                 var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
 
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
+                refreshMarkers(map, '{{ path('map_filter_type_json_data', {'filter': filter, 'filter_type': filter_type}) }}');
 
             }
 
