--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -53,6 +53,15 @@ Control Room Log Map
             $('[data-toggle="tooltip"]').tooltip();
         });
         
+        function refreshMarkers(map, geoJson){
+            map.data.forEach(function (feature) {
+                map.data.remove(feature);
+            });
+
+            map.data.loadGeoJson(geoJson);
+            setTimeout(refreshMarkers(map, geoJson), 5000);
+        }   
+        
         {% if (longitude is not null) and (latitude is not null) %}
         
             /* 
@@ -65,16 +74,7 @@ Control Room Log Map
             EventSiteOverlay.prototype = new google.maps.OverlayView();
 
             // Initialize the map and the custom overlay.
-            
-            function refreshMarkers(map, geoJson){
-                map.data.forEach(function (feature) {
-                    map.data.remove(feature);
-                });
-                
-                map.data.loadGeoJson(geoJson);
-                setTimeout(refreshMarkers(map, geoJson), 5000);
-            }
-
+           
             function initMap() {
                 var map = new google.maps.Map(document.getElementById('largeLogMap'), {
                     zoom: 18,
@@ -203,7 +203,7 @@ Control Room Log Map
                 var srcImage = '{{ url('overlay', {'filename': overlayFileName}) }}';
 
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
-                refreshMarkers(map, '{{ path('map_filter_type_json_data', {'filter': filter, 'filter_type': filter_type}) }}');
+                //refreshMarkers(map, '{{ path('map_filter_type_json_data', {'filter': filter, 'filter_type': filter_type}) }}');
 
             }
 
