--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -279,11 +279,11 @@ Control Room Log Map
             
             function loadGeoJson(map, geoJson)
             {
-                map.data.forEach(function (feature) {
+                map.data.remove(function (feature) {
                     map.data.remove(feature);
                 });
                
-               map.data.loadGeoJson(geoJson);
+                map.data.loadGeoJson(geoJson);
                 
                 map.data.setStyle(function(feature) {
                     
