--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -279,12 +279,12 @@ Control Room Log Map
             
             function loadGeoJson(map, geoJson)
             {               
-                /*
+                
                 map.data.forEach(function (feature) {
-                    console.log(feature);
+                    //console.log(feature);
                     map.data.remove(feature);
                 });
-                */
+                
                 
                 map.data.loadGeoJson(geoJson);
                 
