--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -144,6 +144,21 @@
     width: 100%;
 }
 
+
+#selectFilter { 
+    color: black;
+    background-color: white;
+    font-size: 11px;
+    border:1px solid blue;
+    padding: 1px 2px;
+    text-align: center;
+    cursor: pointer;
+    width:90px;
+    font-weight:bold;
+}
+
+#selectFilter option { color: blue; }
+
 </style>
 {% endblock %}
 
