--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -12,7 +12,7 @@
                 width: 100%;
                 height: 100%;
                 z-index: 9999;
-                background: url("{{ asset('assets/page-load.gif') }}") 50% 50% no-repeat rgb(249,249,249);
+                background: url("{{ asset('assets/page-loader.gif') }}") 50% 50% no-repeat rgb(249,249,249);
             }
         </style>
         {% block javascripts %}{% endblock %}
